# crwrite-linux-windows-mac

UI/: package.json
UI/scripts/: notarize.js  webpack.app.config.js
UI/src/Main/: Global.js
custom-triplets/: arm64-osx.cmake
docs/: BUILD-EXECUTABLES.md  BUILD.md
scripts/: build-linux.sh  build-mac.sh  build-windows.ps1  clean-build-artifacts.ps1  clean-build-artifacts.sh  clean-caches-only.ps1  vcpkg-install-windows.ps1
src/: CMakeLists.txt
src/CMake/: FindFilesystem.cmake
src/Mill/Firmware/: CMakeLists.txt
